# Load Bazel helpers for NPM package linking, the Next.js binary, and running
# the development server.
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//frontend:next/package_json.bzl", next_bin = "bin")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")

# Create Bazel targets for NPM packages from the translated pnpm-lock file.
# Makes NPM dependencies available to other Bazel targets in this package.
npm_link_all_packages(name = "node_modules")

# Define the Bazel target for the Next.js CLI binary.
next_bin.next_binary(
    name = "next_js_binary",
    visibility = ["//visibility:public"],
)

# Run `next dev` through Bazel to run the application in development mode.
# https://nextjs.org/docs/app/api-reference/cli/next#development
js_run_devserver(
    name = "dev",
    tool = ":next_js_binary",
    # Note: had to use WebPack instead of TurboPack to make this work.
    args = ["dev", "--webpack"],
    data = glob([
        "app/**",
        "lib/**",
        "public/**",
        "*.ts",
        # Note: including .mjs was critical because I wasn't doing this
        # before, and it wasn't styling anything
        "*.mjs",
    ]) + [
        ":node_modules",
        "package.json",
        "tsconfig.json",
    ],
    # Run from frontend package directory to resolve files correctly.
    chdir = package_name(),
)
