load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "math_scripts",
    srcs = [
        "src/main.rs",
        "src/math_triangulation.rs",
    ],
    deps = [
        "@crates//:argmin",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:tokio",
    ],
)
