load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "math_scripts",
    srcs = [
        "main.rs",
        "math_triangulation.rs",
    ],
    deps = [
        "@crates//:argmin",
        "@crates//:levenberg-marquardt",
        "@crates//:nalgebra",
        "@crates//:tokio",
    ],
)
